--- a/HitBricks.html
+++ b/HitBricks.html
@@ -81,7 +81,7 @@
 
     function startGame() {
         releaseBall();
-        button.kill();
+        //button.kill();
     }
     function releaseBall() {
 
